<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

	<EditText
		android:id="@+id/editTextLimit"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:layout_marginTop="10dp"
		android:ems="20"
		android:hint="@string/cigarettelimit">
	</EditText>

	<EditText
		android:id="@+id/packCost"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:layout_marginTop="10dp"
		android:ems="20"
		android:hint="@string/packcost">
	</EditText>

	<Button
		android:id="@+id/save"
		android:text="@string/save"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginBottom="10dp"/>

</LinearLayout>